<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Root">

    <LinearLayout style="@style/ActionBar">
        <TextView android:text="@string/app_name"
            style="@style/ActionBarTitle" />

        <ImageButton android:id="@+id/main_refresh_button"
            android:src="@drawable/ic_refresh"
            style="@style/ActionBarIconButton" />
    </LinearLayout>

    <FrameLayout style="@style/Container">
        <!-- Register page -->
        <ScrollView android:id="@+id/main_register_page"
            android:visibility="gone"
            style="@style/Scroll">

            <LinearLayout style="@style/Hero">
                <ImageView android:src="@drawable/ic_account_plus"
                    style="@style/HeroIcon" />

                <TextView android:text="@string/main_register_title"
                    style="@style/HeroTitle" />

                <TextView android:text="@string/main_register_description"
                    style="@style/HeroDescription" />

                <EditText android:id="@+id/main_register_name_input"
                    android:hint="@string/main_register_name"
                    style="@style/HeroInput" />

                <Button android:id="@+id/main_register_button"
                    android:text="@string/main_register_button"
                    style="@style/HeroButton" />
            </LinearLayout>
        </ScrollView>

        <!-- Messages page -->
        <ListView android:id="@+id/main_messages_page"
            style="@style/List" />
    </FrameLayout>
</LinearLayout>
